Apply palantir Java Format